--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12 h-ellipsis-truncate"
              ng-repeat="league in leagues track by league.id_competitions"
              ng-click="showContentPrediction($index)" >
-          <i class="mdi-action-bookmark h-headline" ></i>
+          <img class="h-shield" ng-src="{{getCompetitionShield(league.competiton_type.competition_logo, $index)}}" >
           <span class="h-headline">{{league.name}}</span>
         </div>
       </div>
@@ -71,25 +71,45 @@
                         <td class="col-xs-4"
                             ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
                             ng-class="{active: match.bet.client_bet === 0, winner: match.home_team_goals >= match.away_team_goals}">
-                          <span ng-bind="match.home_team.name" class="h-name-team"></span>
-                          <span ng-bind="match.home_team_goals" class="h-goal-team" ng-if="match.status.id_status != 3"></span>
+
+                          <figure>
+                            <img class="h-shield" ng-src="{{getTeamShield(match.home_team.team_logo,1)}}" >
+                            <figcaption><span ng-bind="match.home_team.short_name" class="h-name-team"></span></figcaption>
+                          </figure>
+
+
+
                         </td>
 
                         <td class="col-xs-4"
                             ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
                             ng-class="{active: match.bet.client_bet == 1}">
+
+                          <span ng-bind="match.home_team_goals" class="h-goal-team" ng-if="match.status.id_status != 3"></span>
+                          <span  class="h-goal-team" ng-if="match.status.id_status != 3">-</span>
+                          <span ng-bind="match.away_team_goals" class="h-goal-team" ng-if="match.status.id_status != 3"></span>
+                          <br />
+
                           <span ng-bind="getTime(match.date)" class="h-time"></span>
                           <br/>
-                                  <span class="status _{{match.status.id_status}}">
-                                    {{ match.status.name | translate}}
-                                  </span>
+                          <span class="status _{{match.status.id_status}}">
+                            {{ match.status.name | translate}}
+                          </span>
                         </td>
 
                         <td class="col-xs-4"
                             ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
                             ng-class="{active: match.bet.client_bet == 2, winner: match.away_team_goals >= match.home_team_goals}">
-                          <span ng-bind="match.away_team.name" class="h-name-team"></span>
-                          <span ng-bind="match.away_team_goals" class="h-goal-team" ng-if="match.status.id_status != 3"></span>
+
+
+                          <figure>
+                            <img class="h-shield" ng-src="{{getTeamShield(match.away_team.team_logo, 2)}}" >
+                            <figcaption>
+                              <span ng-bind="match.away_team.short_name" class="h-name-team"></span>
+                            </figcaption>
+                          </figure>
+
+
                         </td>
 
                       </tr>
