--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12 h-ellipsis-truncate"
              ng-repeat="league in leagues track by league.id_competitions"
              ng-click="showContentPrediction($index)" >
-          <img class="h-shield" ng-src="{{getCompetitionShield(league.competiton_type.competition_logo, $index)}}" >
+          <img class="h-shield" ng-src="{{getCompetitionShield(league.competiton_type.competition_logo)}}" onerror="this.src='img/shield-1.png'">
           <span class="h-headline">{{league.name}}</span>
         </div>
       </div>
@@ -73,11 +73,9 @@
                             ng-class="{active: match.bet.client_bet === 0, winner: match.home_team_goals >= match.away_team_goals}">
 
                           <figure>
-                            <img class="h-shield" ng-src="{{getTeamShield(match.home_team.team_logo,1)}}" >
+                            <img class="h-shield" ng-src="{{match.home_team.team_logo}}" onerror="this.src='img/shield-1.png'">
                             <figcaption><span ng-bind="match.home_team.short_name" class="h-name-team"></span></figcaption>
                           </figure>
-
-
 
                         </td>
 
@@ -103,7 +101,7 @@
 
 
                           <figure>
-                            <img class="h-shield" ng-src="{{getTeamShield(match.away_team.team_logo, 2)}}" >
+                            <img class="h-shield" ng-src="{{match.away_team.team_logo}}" onerror="this.src='img/shield-2.png'">
                             <figcaption>
                               <span ng-bind="match.away_team.short_name" class="h-name-team"></span>
                             </figcaption>
