FUTBOL BRASIL - Cambios de estilo. Quitar bold y bajar de tamaño algunos headers.

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -137,27 +137,27 @@
                           <span ng-bind="rankings.group_name"></span>
                         </th>
                       </tr>
-                      <tr class="h-header light-blue">
-                        <th></th>
-                        <th style="text-align: left;" translate>
+                      <tr>
+                        <th class="h-header light-blue"></th>
+                        <th class="h-header light-blue" style="text-align: left;" translate>
                           STANDINGS.TEAM
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.POINTS
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.MATCHES
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.MATCHES_WON
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.MATCHES_DRAWN
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.MATCHES_LOST
                         </th>
-                        <th translate>
+                        <th class="h-header light-blue" translate>
                           STANDINGS.TABLE.GOALS_FOR
                         </th>
                       </tr>
