--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -772,11 +772,12 @@ h6.team-name {
     .h-header {
       position:relative;
       text-align: center;
-      height:35px;
-      line-height: 35px;
-      font-weight:bold;
+      height:35px !important;
+      line-height: 35px !important;
+      font-weight:normal !important;
       z-index: 10;
       font-size: 1.6em;
+      padding: 0px !important;
     }
 
     .h-header.green {
@@ -813,7 +814,7 @@ h6.team-name {
       min-height:50px;
       line-height: 50px;
       border-bottom: solid 1pt rgb(254,209,0);
-      font-weight:bold;
+      /*font-weight:bold;*/
     }
 
     .h-list.news *[class *= 'col-'] {
@@ -1094,7 +1095,7 @@ h6.team-name {
 
     .h-name-team {
       font-size:1.4em !important;
-      font-weight: bold;
+      /*font-weight: bold;*/
       text-align: center;
       width: 100%;
     }
@@ -1123,7 +1124,7 @@ h6.team-name {
     .content-standings .h-list .h-headline,
     .content-prediction .h-list .h-headline,
     .content-team-selection .h-list .h-headline {
-      font-size:1.8em;
+      font-size:1.5em;
     }
 
     .h-table tbody tr td {
@@ -1273,4 +1274,8 @@ h6.team-name {
 
   .list-group-item-heading {
     color:  rgb(0,40,120) !important;
+  }
+
+  .btn {
+    font-size: 16px !important;
   }
