--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -48,7 +48,7 @@
                                 <thead>
                                   <tr>
                                     <th class="h-header yellow" style="width:20%"  >##</th>
-                                    <th class="h-header yellow" style="width:60%" translate>LEADERBOARD.PLAYER</th>
+                                    <th class="h-header yellow left" style="width:60%" translate>LEADERBOARD.PLAYER</th>
                                     <th class="h-header yellow" style="width:20%" translate>LEADERBOARD.POINTS</th>
                                   </tr>
                                 </thead>
@@ -59,7 +59,7 @@
                                       <span class="text-center-vertical"
                                             ng-bind="leader.index" ></span>
                                     </td>
-                                    <td  style="width:60%" >
+                                    <td  style="width:60%; text-align:left;" >
                                       <span class="text-center-vertical"
                                             ng-bind="leader.client"></span>
                                     </td>
