--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -777,7 +777,8 @@ h6.team-name {
       font-weight:normal !important;
       z-index: 10;
       font-size: 1.6em;
-      padding: 0px !important;
+      padding-top: 0px !important;
+      padding-bottom: 0px !important;
     }
 
     .h-header.green {
@@ -823,22 +824,23 @@ h6.team-name {
     }
 
     .content-news .h-headline {
-      font-size:1.8em;
+      font-size:1.6em;
+      font-weight: bold;
     }
     .content-news #wrapper2 .h-headline  {
-      font-size:2em;
+      font-size:1.6em;
     }
 
 
     .content-news .h-moment {
       font-size:1.2em;
-      font-weight:bold;
+      /*font-weight:bold;*/
       color: rgb(44,156,211);
     }
 
     .content-news .h-body {
       margin-top: 10px !important;
-      font-size: 1.4em;
+      font-size: 1.3em;
     }
 
     /*@media(max-width: 720px) {
@@ -1128,7 +1130,11 @@ h6.team-name {
     }
 
     .h-table tbody tr td {
-        font-size:1.2em;
+        font-size:1.4em;
+    }
+
+    .h-header.left {
+        text-align:left !important;
     }
 
     .control-label {
